# pokemod

./: .gitignore  README.md
app/: .gitignore  CMakeLists.txt  build.gradle  proguard-rules.pro
app/src/arm64/res/values/: integers.xml
app/src/armeabi/res/values/: integers.xml
app/src/main/: AndroidManifest.xml
app/src/main/java/com/zeprus/pokemodgo/: InjectionService.java  Injector.java  LoadModulePrefFragment.java  MainActivity.java  ModulePrefFragment.java  ModuleSettingsActivity.java  Script.java  (+3 more)
app/src/main/jni/arm64-v8a/: libfrida-core.a.txt  pokemod-injector.c
app/src/main/jni/arm64-v8a/include/: frida-core.h
app/src/main/jni/arm64-v8a/scripts/: fast_encounter  fast_powerup  get_encounter_stats  get_inventory_stats  get_raid_stats  ivnames  keep_encounter_ui  masstransfer  nameplateiv  perfected_throw  skip_encounter_intro
app/src/main/jni/armeabi-v7a/include/: frida-core.h
app/src/main/jni/armeabi-v7a/scripts/: fast_encounter  fast_powerup  get_encounter_stats  get_inventory_stats  get_raid_stats  ivnames  keep_encounter_ui  masstransfer  nameplateiv  perfected_throw  skip_encounter_intro
app/src/main/res/drawable/: button_rounded.xml  rounded_background.xml
app/src/main/res/layout/: activity_settings.xml  app_bar_settings.xml  content_main.xml  content_settings.xml  injection_widget.xml  nav_header_main.xml  root_missing.xml
app/src/main/res/menu/: activity_main_drawer.xml
app/src/main/res/values/: arrays.xml  colors.xml  integers.xml  strings.xml  styles.xml
app/src/main/res/xml/: load_modules_screen.xml  module_pref_screen.xml
(+43 files in other folders)
